--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "firebase": "^12.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-is": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2"
